[metadata]
name = django-atrium
version = 1.2.2
description = A Django app for mx integration
long_description = file: README.md
url = https://www.lightningkite.com/
author = lightningkite
author_email = info@lightningkite.com
license = tba
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
